server/core/antlr/grammars/JSONext.g4
grammar JSONext;

json
   : topvalue
   ;

obj
   : '{' pair cdrpair* '}'
   | '{' '}'
   ;

pair
   : STRING ':' value
   ;

cdrpair
   : ',' STRING ':' value
   ;

array
   : '[' value cdrvalue* ']'
   | '[' ']'
   ;

topvalue
   : value
   ;

value
   : STRING
   | NUMBER
   | obj
   | array
   | 'true'
   | 'false'
   | 'null'
   ;

cdrvalue
   : ',' STRING
   | ',' NUMBER
   | ',' obj
   | ',' array
   | ',' 'true'
   | ',' 'false'
   | ',' 'null'
   ;


STRING
   : '"' (ESC | ~ ["\\])* '"'
   ;
fragment ESC
   : '\\' (["\\/bfnrt] | UNICODE)
   ;
fragment UNICODE
   : 'u' HEX HEX HEX HEX
   ;
fragment HEX
   : [0-9a-fA-F]
   ;
NUMBER
   : '-'? INT '.' [0-9] + EXP? | '-'? INT EXP | '-'? INT
   ;
fragment INT
   : '0' | [1-9] [0-9]*
   ;
// no leading zeros
fragment EXP
   : [Ee] [+\-]? INT
   ;
// \- since - means "range" inside [...]
WS
   : [ \t\n\r] + -> skip
   ;
